# book

./: .backend.gitignore  .gitignore  CLAUDE.md  docusaurus.config.js  ingest_docs.py  package-lock.json  package.json  sidebars.js  tsconfig.json  verify_env_setup.py
backend/: README.md  alembic.ini  ingest_docs.py  pyproject.toml  requirements.txt  test_agents.py  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 5dd682b5b5ea_initial_migration_for_user_profile_and_.py  d19b43a7f41e_fix_table_names_and_remove_invalid_.py  f56f53cbe90e_fix_foreign_key_constraints.py
backend/history/prompts/003-auth-personalization/: 0008-backend-implementation-of-auth-personalization-ai-summaries.green.prompt.md
backend/src/: __init__.py  app.py  main.py
backend/src/agents/: __init__.py  book_agent.py  greeting_agent.py  rag_retrieval_agent.py
backend/src/api/: ai_summary.py  auth.py  main.py  personalization.py  user.py
backend/src/middleware/: auth.py  rate_limit.py
backend/src/models/: chat.py  document.py  retrieval.py  user.py
backend/src/rag_chatbot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/services/: ai_summary_service.py  chat_service.py  content_service.py  embedding_service.py  ingestion_service.py  personalization_service.py  profile_service.py  qdrant_service.py  retrieval_service.py  user_service.py  validation.py
backend/src/utils/: better_auth.py  config.py  database.py  db_retry.py  error_handler.py  gemini_client.py  logger.py  logging.py  sanitization.py  validators.py
docs/: intro.md  (+1 more)
(+162 files in other folders)
