[project]
name = "rag-chatbot-backend"
version = "0.1.0"
description = "Backend for RAG Chatbot integrated with Docusaurus"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    "cohere>=5.0.0",
    "qdrant-client>=1.8.0",
    "openai>=1.3.5",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pytest>=7.4.0",
    "httpx>=0.25.0",
    "openai-agents>=0.6.2",
    "google-generativeai>=0.8.5",
    "alembic>=1.13.1",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "sqlmodel>=0.0.16",
    "psycopg2-binary>=2.9.0",
    "email-validator>=2.0.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.0.0",
]
